# verilog2nn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: run_tests.py
tests/features/: TEST.md
tests/verilog/: adder4.v  aes128.v  and_gate.v  cmp8.v  combo_expr.v  md5_full.v  md5_round.v  multi_module.v  mux4.v  not_gate.v  or_gate.v  sha256.v  xor_gate.v
verilog2nn/: __init__.py  cli.py  gate_mapper.py  netlist_parser.py  topo_sort.py  verify.py  yosys_frontend.py
