[project]
name = "verilog2nn"
version = "0.1.0"
description = "Compile Verilog combinational logic to equivalent PyTorch neural networks"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "safetensors",
    "numpy",
    "packaging",
]

[project.scripts]
verilog2nn = "verilog2nn.cli:main"

[tool.setuptools.packages.find]
include = ["verilog2nn*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
